# rust_get_yaml_config

./: Cargo.toml
src/: main.rs
src/config/: site.yaml
src/views/: info.html
