[package]
name = "watchSite"
version = "0.1.0"
authors = ["CarterTsai <hamming1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
systemstat = "0.1.7"
env_logger = "0.8"
tera = "1.0"